@@ -1,4 +1,15 @@
 #############################################################################
+                                 VERSION 1.1.1 
+                                   
+#############################################################################
+- NEW FEATURES
+
+- MODIFICATIONS
+
+- BUG FIXES
+	* Added a remove_Valist function in Python wrapper files, to fix a memory leak problem in pdb2pka
+
+#############################################################################
                                  VERSION 1.1.0 
                                    
 #############################################################################
